# rs251

./: .gitignore  CMakeLists.txt  LICENSE
include/rs251/: rs251.h
src/: rs251.c
tests/: test_rs251.c
